[package]
name = "temporal_capi"
version = "0.1.2"
edition = "2024"

[dependencies.temporal_capi]
version = "0.1.2"
default-features = false
features = ["compiled_data"]

[dependencies.temporal_rs]
version = "*"
default-features = false
features = ["float64_representable_durations"]

[lib]
crate-type = ["staticlib"]

[profile.release]
strip = true
lto = true
